# orangecrab_sketches

./: .gitignore  .gitmodules  index.html  pyproject.toml
orangecrab_sketches/: adc.py  build.py  capsense.py  clock.py  dac.py  hid.py  tables.py  top.py  usb_hostside.py
orangecrab_sketches.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_orangecrab_sketches.py
