[tool.poetry]
name = "orangecrab_sketches"
version = "0.1.0"
description = ""
authors = ["Josh Koike <jk@tilting.me>"]

[tool.poetry.dependencies]
python = "^3.7"
nmigen = { git = "git://github.com/nmigen/nmigen" }
nmigen-boards = { path="../nmigen-boards" }
yowasp-nextpnr-ecp5-25k = "*"
yowasp-yosys = "*"
usb_protocol = { git = "https://github.com/tiltmesenpai/python-usb-protocol" }
luna = { git = "git://github.com/tiltmesenpai/luna", branch = "master" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
setuptools = "*"
wheel = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
